tests/extra_mod/macros/long_simple_three_mpst_short_fail.stderr
error[E0308]: mismatched types
   --> $DIR/long_simple_three_mpst_short_fail.rs:103:21
    |
103 |             let s = send_mpst!(s, (), MeshedChannelsThree, 3, 2);
    |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `mpstthree::binary::struct_trait::send::Send`, found struct `Recv`
    |
    = note: expected struct `mpstthree::binary::struct_trait::send::Send<(), _>`
               found struct `Recv<Branching0fromCtoB, mpstthree::binary::struct_trait::end::End>`
note: return type inferred to be `mpstthree::binary::struct_trait::send::Send<(), _>` here
   --> $DIR/long_simple_three_mpst_short_fail.rs:96:5
    |
96  | /     offer_mpst!(s, recv_mpst_b_from_c, {
97  | |         Branching0fromCtoB::Done(s) => {
98  | |             close_mpst_multi(s)
99  | |         },
...   |
106 | |         },
107 | |     })
    | |______^
    = note: this error originates in the macro `mpst_seq::send_mpst` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   --> $DIR/long_simple_three_mpst_short_fail.rs:105:24
    |
105 |             endpoint_b(s)
    |                        ^ expected struct `mpstthree::binary::struct_trait::end::End`, found struct `mpstthree::binary::struct_trait::send::Send`
    |
    = note: expected struct `MeshedChannelsThree<mpstthree::binary::struct_trait::end::End, Recv<Branching0fromCtoB, mpstthree::binary::struct_trait::end::End>, _, _>`
               found struct `MeshedChannelsThree<mpstthree::binary::struct_trait::send::Send<(), Recv<(), mpstthree::binary::struct_trait::end::End>>, _, _, _>`
note: return type inferred to be `MeshedChannelsThree<mpstthree::binary::struct_trait::end::End, Recv<Branching0fromCtoB, mpstthree::binary::struct_trait::end::End>, RoleC<RoleEnd>, RoleB<RoleEnd>>` here
   --> $DIR/long_simple_three_mpst_short_fail.rs:96:5
    |
96  | /     offer_mpst!(s, recv_mpst_b_from_c, {
97  | |         Branching0fromCtoB::Done(s) => {
98  | |             close_mpst_multi(s)
99  | |         },
...   |
106 | |         },
107 | |     })
    | |______^
    = note: this error originates in the macro `offer_mpst` (in Nightly builds, run with -Z macro-backtrace for more info)
